@@ -21,18 +21,6 @@ end_package
 
 begin_import
 import|import
-name|java
-operator|.
-name|util
-operator|.
-name|function
-operator|.
-name|Function
-import|;
-end_import
-
-begin_import
-import|import
 name|org
 operator|.
 name|apache
@@ -171,6 +159,24 @@ name|sqlbuilder
 operator|.
 name|sqltree
 operator|.
+name|SQLTreeProcessor
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|access
+operator|.
+name|sqlbuilder
+operator|.
+name|sqltree
+operator|.
 name|SimpleNodeTreeVisitor
 import|;
 end_import
@@ -204,18 +210,13 @@ name|BaseSQLTreeProcessor
 extends|extends
 name|SimpleNodeTreeVisitor
 implements|implements
-name|Function
-argument_list|<
-name|Node
-argument_list|,
-name|Node
-argument_list|>
+name|SQLTreeProcessor
 block|{
 annotation|@
 name|Override
 specifier|public
 name|Node
-name|apply
+name|process
 parameter_list|(
 name|Node
 name|node
