@@ -45,7 +45,7 @@ name|sqlbuilder
 operator|.
 name|sqltree
 operator|.
-name|Node
+name|SQLTreeProcessor
 import|;
 end_import
 
@@ -293,18 +293,6 @@ name|List
 import|;
 end_import
 
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|function
-operator|.
-name|Function
-import|;
-end_import
-
 begin_comment
 comment|/**  * A SQLite database adapter that works with Zentus JDBC driver. See  * http://www.zentus.com/sqlitejdbc/ for the driver information. Also look at  * http://www.xerial.org/trac/Xerial/wiki/SQLiteJDBC for another adaptor option.  *   *<pre>  *      sqlite.jdbc.url = jdbc:sqlite:sqlitetest.db  *      sqlite.jdbc.driver = org.sqlite.JDBC  *</pre>  *   * @since 3.0  */
 end_comment
@@ -499,12 +487,7 @@ comment|/**      * @since 4.2      */
 annotation|@
 name|Override
 specifier|public
-name|Function
-argument_list|<
-name|Node
-argument_list|,
-name|Node
-argument_list|>
+name|SQLTreeProcessor
 name|getSqlTreeProcessor
 parameter_list|()
 block|{
